--- a/rancher/docker-compose.yml
+++ b/rancher/docker-compose.yml
@@ -12,7 +12,7 @@ traefik:
     io.rancher.container.hostname_override: container_name
   tty: true
   log_opt: {}
-  image: rawmind/alpine-traefik:1.0.0-rc3
+  image: rawmind/alpine-traefik:1.0.0
   environment:
   - CONF_INTERVAL=${refresh_interval}
   volumes_from:
