Dynamic host_label for traefik-conf
If the label for the main container is dynamic, it probably should be the same for it's sidekick

--- a/rancher/docker-compose.yml
+++ b/rancher/docker-compose.yml
@@ -21,7 +21,7 @@ traefik-conf:
   log_driver: ''
   labels:
     io.rancher.scheduler.global: 'true'
-    io.rancher.scheduler.affinity:host_label: traefik_lb=true
+    io.rancher.scheduler.affinity:host_label: ${host_label}
     io.rancher.scheduler.affinity:container_label_ne: io.rancher.stack_service.name=$${stack_name}/$${service_name}
     io.rancher.container.start_once: 'true'
   tty: true
