--- a/rancher/docker-compose.yml
+++ b/rancher/docker-compose.yml
@@ -27,6 +27,6 @@ traefik-conf:
     io.rancher.container.start_once: 'true'
   tty: true
   log_opt: {}
-  image: rawmind/rancher-traefik:0.3.4
+  image: rawmind/rancher-traefik:0.3.4-2
   net: none
 
