--- a/rancher/rancher-compose.yml
+++ b/rancher/rancher-compose.yml
@@ -47,7 +47,7 @@
       label: "Enable ACME:"
       required: true
       default: false 
-      type: "bool"
+      type: "boolean"
     - variable: "acme_email"
       description: "ACME user email."
       label: "ACME email:"
@@ -59,7 +59,7 @@
       label: "ACME ondemand:"
       required: true
       default: true 
-      type: "bool"
+      type: "boolean"
     - variable: "ssl_key"
       description: "SSL key to secure the service. *Required if you enable https"
       label: "SSL key"
