--- a/rancher/docker-compose.yml
+++ b/rancher/docker-compose.yml
@@ -1,8 +1,8 @@
 traefik:
   ports:
-  - ${admin_port}:8000/tcp
-  - ${http_port}:8080/tcp
-  - ${https_port}:8443/tcp
+  - ${admin_port}/tcp
+  - ${http_port}/tcp
+  - ${https_port}/tcp
   log_driver: ''
   labels:
     io.rancher.scheduler.global: 'true'
@@ -12,9 +12,12 @@ traefik:
     io.rancher.container.hostname_override: container_name
   tty: true
   log_opt: {}
-  image: rawmind/alpine-traefik:1.0.2-5
+  image: rawmind/alpine-traefik:1.0.2-6
   environment:
   - CONF_INTERVAL=${refresh_interval}
+  - TRAEFIK_HTTP_PORT=${http_port}
+  - TRAEFIK_HTTPS_PORT=${https_port}
+  - TRAEFIK_ADMIN_PORT=${admin_port}
   - TRAEFIK_HTTPS_ENABLE=${https_enable}
   - TRAEFIK_ACME_ENABLE=${acme_enable}
   - TRAEFIK_ACME_EMAIL=${acme_email}
