--- a/rancher/docker-compose.yml
+++ b/rancher/docker-compose.yml
@@ -12,7 +12,7 @@ traefik:
     io.rancher.container.hostname_override: container_name
   tty: true
   log_opt: {}
-  image: rawmind/alpine-traefik:1.0.3-1
+  image: rawmind/alpine-traefik:1.1.1
   environment:
   - CONF_INTERVAL=${refresh_interval}
   - TRAEFIK_HTTP_PORT=${http_port}
@@ -32,7 +32,9 @@ traefik-conf:
     io.rancher.container.start_once: 'true'
   tty: true
   log_opt: {}
-  image: rawmind/rancher-traefik:0.3.4-6
+  image: rawmind/rancher-traefik:0.3.4-7
   net: none
   volumes:
     - /opt/tools
+
+
