Updated to traefik 1.3.0

--- a/rancher/docker-compose.yml
+++ b/rancher/docker-compose.yml
@@ -12,7 +12,7 @@ traefik:
     io.rancher.container.hostname_override: container_name
   tty: true
   log_opt: {}
-  image: rawmind/alpine-traefik:1.2.3
+  image: rawmind/alpine-traefik:1.3.0
   environment:
   - CONF_INTERVAL=${refresh_interval}
   - TRAEFIK_HTTP_PORT=${http_port}
@@ -22,6 +22,7 @@ traefik:
   - TRAEFIK_ACME_EMAIL=${acme_email}
   - TRAEFIK_ACME_ONDEMAND=${acme_ondemand}
   - TRAEFIK_ACME_ONHOSTRULE=${acme_onhostrule}
+  - TRAEFIK_INSECURE_SKIP=${insecure_skip}
   volumes_from:
   - traefik-conf
 traefik-conf:
@@ -33,7 +34,7 @@ traefik-conf:
     io.rancher.container.start_once: 'true'
   tty: true
   log_opt: {}
-  image: rawmind/rancher-traefik:0.3.4-15
+  image: rawmind/rancher-traefik:0.3.4-19
   net: none
   volumes:
     - /opt/tools
