--- a/rancher/rancher-compose.yml
+++ b/rancher/rancher-compose.yml
@@ -1,6 +1,6 @@
 .catalog:
   name: traefik
-  version: v1.2.3-rancher1
+  version: v1.3.0-rancher1
   description: |
     (Experimental) Traefik load balancer.
   minimum_rancher_version: v0.59.0
@@ -78,6 +78,12 @@
       type: "multiline"
       required: false
       default: ""
+    - variable: "insecure_skip"
+      description: "Enable InsecureSkipVerify param."
+      label: "InsecureSkipVerify:"
+      required: true
+      default: false 
+      type: "boolean"
     - variable: "refresh_interval"
       description: "Interval to poll/apply configuration changes." 
       label: "Refresh Interval (s):"
