--- a/rancher/docker-compose.yml
+++ b/rancher/docker-compose.yml
@@ -13,7 +13,7 @@ traefik:
     io.rancher.container.hostname_override: container_name
   tty: true
   log_opt: {}
-  image: rawmind/alpine-traefik:1.3.3
+  image: rawmind/alpine-traefik:1.3.6
   environment:
   - CONF_INTERVAL=${refresh_interval}
   - TRAEFIK_HTTP_PORT=${http_port}
@@ -35,7 +35,7 @@ traefik-conf:
     io.rancher.container.start_once: 'true'
   tty: true
   log_opt: {}
-  image: rawmind/rancher-traefik:0.3.4-19
+  image: rawmind/rancher-traefik:1.3.6
   net: none
   volumes:
     - /opt/tools
