--- a/rancher/rancher-compose.yml
+++ b/rancher/rancher-compose.yml
@@ -11,7 +11,7 @@
       description: "Host label where to run traefik service."
       label: "Host label:"
       required: true
-      default: "traefik_lb=true" 
+      default: "traefik_lb=true"
       type: "string"
     - variable: "http_port"
       description: "Traefik http public port to listen."
@@ -25,11 +25,18 @@
       required: true
       default: 8443
       type: "int"
+    - variable: "admin_enable"
+      label: "Enable Web UI:"
+      description: |
+        Enable Traefik Web UI to visualize frontends, backends and statistics.
+      default: false
+      required: true
+      type: "boolean"
     - variable: "admin_port"
       description: "Traefik admin public port to listen."
       label: "Admin port:"
       required: true
-      default: 8000 
+      default: 8000
       type: "int"
     - variable: "https_enable"
       label: "Enable HTTPS:"
@@ -46,25 +53,25 @@
       description: "Enable acme support on traefik."
       label: "Enable ACME:"
       required: true
-      default: false 
+      default: false
       type: "boolean"
     - variable: "acme_email"
       description: "ACME user email."
       label: "ACME email:"
       required: true
-      default: "test@traefik.io" 
+      default: "test@traefik.io"
       type: "string"
     - variable: "acme_ondemand"
       description: "Enable acme onDemand."
       label: "ACME onDemand:"
       required: true
-      default: true 
+      default: true
       type: "boolean"
     - variable: "acme_onhostrule"
       description: "Enable acme onHostRule."
       label: "ACME onHostRule:"
       required: true
-      default: true 
+      default: true
       type: "boolean"
     - variable: "ssl_key"
       description: "SSL key to secure the service. *Required if you enable https"
@@ -82,13 +89,13 @@
       description: "Enable InsecureSkipVerify param."
       label: "InsecureSkipVerify:"
       required: true
-      default: false 
+      default: false
       type: "boolean"
     - variable: "refresh_interval"
-      description: "Interval to poll/apply configuration changes." 
+      description: "Interval to poll/apply configuration changes."
       label: "Refresh Interval (s):"
       required: true
-      default: 10 
+      default: 10
       type: "int"
 traefik:
   retain_ip: true
