--- a/rancher/docker-compose.yml
+++ b/rancher/docker-compose.yml
@@ -19,12 +19,16 @@ traefik:
   - TRAEFIK_HTTP_PORT=${http_port}
   - TRAEFIK_HTTPS_PORT=${https_port}
   - TRAEFIK_HTTPS_ENABLE=${https_enable}
-  - TRAEFIK_ADMIN_ENABLE=${admin_enable}
   - TRAEFIK_ACME_ENABLE=${acme_enable}
   - TRAEFIK_ACME_EMAIL=${acme_email}
   - TRAEFIK_ACME_ONDEMAND=${acme_ondemand}
   - TRAEFIK_ACME_ONHOSTRULE=${acme_onhostrule}
   - TRAEFIK_INSECURE_SKIP=${insecure_skip}
+  - TRAEFIK_ADMIN_ENABLE=${admin_enable}
+  - TRAEFIK_ADMIN_READ_ONLY=${admin_readonly}
+  - TRAEFIK_ADMIN_STATISTICS=${admin_statistics}
+  - TRAEFIK_ADMIN_BASIC_AUTH_USERS=${admin_basic_users}
+  - TRAEFIK_ADMIN_DIGEST_AUTH_USERS=${admin_digest_users}
   volumes_from:
   - traefik-conf
 traefik-conf:
