fix(compose): Change healthcheck route

--- a/rancher/rancher-compose.yml
+++ b/rancher/rancher-compose.yml
@@ -128,7 +128,7 @@ traefik:
     port: 8000
     interval: 5000
     unhealthy_threshold: 3
-    request_line: 'GET /dashboard/# HTTP/1.0'
+    request_line: 'GET /ping HTTP/1.0'
     healthy_threshold: 2
     response_timeout: 5000
   metadata:
