Added compress option for entrypoints. PR #42

--- a/rancher/rancher-compose.yml
+++ b/rancher/rancher-compose.yml
@@ -1,6 +1,6 @@
 .catalog:
   name: traefik
-  version: 1.4.0-rc1-rancher1
+  version: 1.3.8-rancher1
   description: |
     (Experimental) Traefik load balancer.
   minimum_rancher_version: v0.59.0
@@ -30,6 +30,13 @@
       description: |
         Enable Traefik Web UI to visualize frontends, backends and statistics.
       default: false
+      required: true
+      type: "boolean"
+    - variable: "compress_enable"
+      label: "Enable compression:"
+      description: |
+        Enable Traefik compression for entrypoints.
+      default: true
       required: true
       type: "boolean"
     - variable: "admin_port"
