--- a/rancher/docker-compose.yml
+++ b/rancher/docker-compose.yml
@@ -13,10 +13,12 @@ traefik:
     io.rancher.container.hostname_override: container_name
   tty: true
   log_opt: {}
-  image: rawmind/alpine-traefik:1.4.0-rc1
+  image: rawmind/alpine-traefik:1.3.8-2
   environment:
   - CONF_INTERVAL=${refresh_interval}
   - TRAEFIK_HTTP_PORT=${http_port}
+  - TRAEFIK_HTTP_COMPRESSION=${compress_enable}
+  - TRAEFIK_HTTPS_COMPRESSION=${compress_enable}
   - TRAEFIK_HTTPS_PORT=${https_port}
   - TRAEFIK_HTTPS_ENABLE=${https_enable}
   - TRAEFIK_ACME_ENABLE=${acme_enable}
