--- a/rancher/docker-compose.yml
+++ b/rancher/docker-compose.yml
@@ -31,6 +31,7 @@ traefik:
   - TRAEFIK_ADMIN_STATISTICS=${admin_statistics}
   - TRAEFIK_ADMIN_BASIC_AUTH_USERS=${admin_basic_users}
   - TRAEFIK_ADMIN_DIGEST_AUTH_USERS=${admin_digest_users}
+  - TRAEFIK_PROMETHEUS_ENABLE=${prometheus_enable}
   volumes_from:
   - traefik-conf
 traefik-conf:
