--- a/rancher/rancher-compose.yml
+++ b/rancher/rancher-compose.yml
@@ -1,6 +1,6 @@
 .catalog:
   name: traefik
-  version: 1.3.8-rancher1
+  version: 1.4.0-rancher1
   description: |
     (Experimental) Traefik load balancer.
   minimum_rancher_version: v0.59.0
@@ -138,8 +138,8 @@
     - variable: "prometheus_enable"
       description: "To enable statistics to be pulled by Prometheus."
       label: "Enable Prometheus"
-      default: true
-      required: false
+      default: false
+      required: true
       type: "boolean"
 traefik:
   retain_ip: true
