--- a/rancher/rancher-compose.yml
+++ b/rancher/rancher-compose.yml
@@ -141,6 +141,12 @@
       default: false
       required: true
       type: "boolean"
+    - variable: "prometheus_buckets"
+      description: "To define your own buckets"
+      label: "Prometheus buckets"
+      default: "[0.1,0.3,1.2,5.0]"
+      required: true
+      type: "string"
 traefik:
   retain_ip: true
   health_check:
