--- a/rancher/docker-compose.yml
+++ b/rancher/docker-compose.yml
@@ -13,7 +13,7 @@ traefik:
     io.rancher.container.hostname_override: container_name
   tty: true
   log_opt: {}
-  image: rawmind/alpine-traefik:1.4.4-0
+  image: rawmind/alpine-traefik:1.4.4-1
   environment:
   - CONF_INTERVAL=${refresh_interval}
   - TRAEFIK_HTTP_PORT=${http_port}
@@ -21,6 +21,7 @@ traefik:
   - TRAEFIK_HTTPS_COMPRESSION=${compress_enable}
   - TRAEFIK_HTTPS_PORT=${https_port}
   - TRAEFIK_HTTPS_ENABLE=${https_enable}
+  - TRAEFIK_CONSTRAINTS=${constraints}
   - TRAEFIK_ACME_ENABLE=${acme_enable}
   - TRAEFIK_ACME_EMAIL=${acme_email}
   - TRAEFIK_ACME_ONDEMAND=${acme_ondemand}
