--- a/root/opt/monit/etc/conf.d/monit-service.conf
+++ b/root/opt/monit/etc/conf.d/monit-service.conf
@@ -1,4 +1,5 @@
 check process traefik with pidfile /opt/traefik/traefik.pid
   start program = "/opt/traefik/bin/traefik-service.sh start"
   stop program = "/opt/traefik/bin/traefik-service.sh stop"
-  if failed port 8000 type tcp for 5 cycles then exec "/opt/monit/bin/monit quit"
+  if not exist then restart
+  if not exist for 5 cycles then exec "/opt/monit/bin/monit quit"
