--- a/rancher/docker-compose.yml
+++ b/rancher/docker-compose.yml
@@ -13,7 +13,7 @@ traefik:
     io.rancher.container.hostname_override: container_name
   tty: true
   log_opt: {}
-  image: rawmind/alpine-traefik:1.5.4-0
+  image: rawmind/alpine-traefik:1.6.0
   environment:
   - CONF_INTERVAL=${refresh_interval}
   - TRAEFIK_HTTP_PORT=${http_port}
