--- a/templates/traefik/0/docker-compose.yml
+++ b/templates/traefik/0/docker-compose.yml
@@ -63,7 +63,7 @@ services:
     - TRAEFIK_ACME_ENABLE=${acme_enable}
     - TRAEFIK_ACME_EMAIL=${acme_email}
     - TRAEFIK_ACME_CHALLENGE=${acme_challenge}
-    - TRAEFIK_ACME_CHALLENGE_HTTP_ENTRYPOINT=${acme_challenge_type}
+    - TRAEFIK_ACME_CHALLENGE_HTTP_ENTRYPOINT=${acme_challenge}
     - TRAEFIK_ACME_CHALLENGE_DNS_PROVIDER=${acme_challenge_dns_provider}
     - TRAEFIK_ACME_CHALLENGE_DNS_CREDENTIALS='${acme_challenge_dns_credentials}'
     - TRAEFIK_ACME_ONHOSTRULE=${acme_onhostrule}
