--- a/rancher/docker-compose.yml
+++ b/rancher/docker-compose.yml
@@ -27,6 +27,7 @@ traefik:
   - TRAEFIK_ACME_ONDEMAND=${acme_ondemand}
   - TRAEFIK_ACME_ONHOSTRULE=${acme_onhostrule}
   - TRAEFIK_ACME_CASERVER=${acme_caserver}
+  - TRAEFIK_ACME_KEYTYPE=${acme_keytype}
   - TRAEFIK_INSECURE_SKIP=${insecure_skip}
   - TRAEFIK_ADMIN_ENABLE=${admin_enable}
   - TRAEFIK_ADMIN_READ_ONLY=${admin_readonly}
